# rust-azure-function-event-hubtrigger

./: .gitignore  Cargo.toml  README.md  eventhubrequest.json  example.http  host.json  start.sh
EventHubTrigger/: function.json
src/: event_processor.rs  handlers.rs  main.rs  models.rs
