[package]
name = "axumapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.8"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["raw_value"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
